--- a/projects/pagelayout.css
+++ b/projects/pagelayout.css
@@ -75,27 +75,25 @@ nav a:hover {
 .Kashmir {
     float: left;
     width: 300px;
-    margin: 10px 20px 10px 0;
     border: 2px solid #5c0000;
     background-color: rgb(252, 166, 6);
-    text-align: center;
+    text-align: left;
 }
 
 .Kashmir img {
     width: 100%;
-    height: auto;
-    border-bottom: 2px solid #5c0000;
+    border-bottom: 1px solid #5c0000;
 }
 
 .Kashmir figcaption {
     font-style: italic;
     color: #5c0000;
     font-size: 14px;
-    padding: 5px;
+    padding: 10px; 
 }
 
 main {
-    padding: 150px;
+    padding: 30px 20px 30px 0;
     line-height: 1.6;
     text-align: justify;
     color: #140c00;
@@ -105,7 +103,7 @@ main {
 footer {
     background-color: rgb(252, 166, 6);
     color: maroon;
-    text-align: bottom;
+    text-align: left;
     padding: 10px;
     font-size: 14px;
     border-radius: 0 0 10px 10px;
