--- a/activities/print.css
+++ b/activities/print.css
@@ -2,6 +2,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+header {
+    background-color: rebeccapurple;
+    color: white;
+}
+
 nav a {
     display: block;
     padding: 15px;
@@ -22,6 +27,14 @@ nav {
 
 .main-row {
     display: flex;
+}
+
+main h2 {
+    margin: 0;
+}
+
+.sidebar h3 {
+    margin: 0;
 }
 
 .row {
