--- a/activities/responsivepageforprint.css
+++ b/activities/responsivepageforprint.css
@@ -60,3 +60,23 @@ main h2 {
 .sidebar {
     width: 200px;
 }
+
+@media ONLY screen AND (max-width: 400px) {
+    nav {
+        flex-direction: column;
+    }
+
+    .main-row {
+        flex-direction: column-reverse;
+    }
+
+    .card {
+        width: 100%;
+    }
+    .sidebar {
+        width: 100%;
+    }
+    .main-card {
+        order: -1;
+    }
+}
