--- a/activities/tableengagement.css
+++ b/activities/tableengagement.css
@@ -1,3 +1,30 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.schedule {
+    caption-side: bottom;
+    border-spacing: 0;
+}
+
+.schedule thead tr {
+    background-color: navy;
+    color: white;
+}
+
+.grayish {
+    background-color: gray;
+}
+
+.schedule tbody tr:nth-child(even) {
+    background-color: gray;
+}
+
+.schedule tfoot tr {
+    background-color: blue;
+    color: white;
+}
+
+.num {
+    vertical-align: top;
+}
